src/components/Coin.css
.coin-container {
  display: flex;
  justify-content: center;
  padding: 20px;
}

.coin-row {
  justify-content: start;
  align-items: center;
  height: 80px;
  border-bottom: 1px solid #d7d7d7;
  display: grid;
  align-items: center;
  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
  margin-bottom: 20px;
  

}

.coin {
  display: flex;
  align-items: center;
  padding-right: 15px;
  min-width: 300px;
}

.coin h1 {
  font-size: 16px;
  width: 150px;
}

.coin img {
  height: 30px;
  width: 30px;
  margin-right: 15px;
}

.coin-symbol {
  text-transform: uppercase;
}

.coin-data {
  display: flex;
  text-align: right;
  justify-content: space-between;
  width: 100%;

}

.coin-price {
  width: 110px;
}

.coin-volume {
  width: 155px;
}

.coin-marketcap {
  width: 230px;
}

.coin-percent {
  width: 100px;
}

.red {
  color: #f00606;
}

.green {
  color: #11d811;
}
@media only screen and (min-width: 800px) {
  .coin-row {
    justify-content: start;
    align-items: center;
    height: 80px;
    display: grid;
    align-items: center;
    border-bottom: 1px solid #d7d7d7;
    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
    margin-bottom: 20px;
    width: 800px;
  
  }
}

